fixed map z-index

--- a/app/assets/stylesheets/wejo.css.scss
+++ b/app/assets/stylesheets/wejo.css.scss
@@ -17,6 +17,7 @@ body {
 }
 
 .overlay {
+	z-index: 3;
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -37,30 +38,30 @@ body {
 }
 
 .slide1 {
-	z-index: 5;
+	z-index: 6;
 	@include slide;
 	background-color: #1e8;
 }
 
 .slide2 {
-	z-index: 4;
+	z-index: 5;
 	@include slide;
 	background-color: #81e;
 }
 
 .slide3 {
-	z-index: 3;
+	z-index: 4;
 	@include slide;
 }
 
 .slide4 {
-	z-index: 4;
+	z-index: 5;
 	@include slide;
 	background-color: #888;
 }
 
 #map-canvas {
-	z-index: 1;
+	z-index: 2;
 	position: absolute;
 	height: 100%;
 	width: 100%;
